force-app/main/default/objects/TradingMap__mdt/TradingMap__mdt.object-meta.xml
<CustomObject>
    <description>User-defined maps of Addepar Trading Objects and Fields to Salesforce SObjects and Fields</description>
    <label>Trading Map</label>
    <pluralLabel>Trading Maps</pluralLabel>
</CustomObject>