force-app/main/default/objects/TradingMap__mdt/fields/RecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDeveloperName__c</fullName>
    <defaultValue>&quot;InvestmentAccount&quot;</defaultValue>
    <description>The Record Type Developer Name this mapping applies to for the selected SObject.  Leave blank to apply to all record types or if no record types exist.</description>
    <inlineHelpText>The Record Type Developer Name this mapping applies to for the selected SObject.  Leave blank to apply to all record types or if no record types exist.</inlineHelpText>
    <label>Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>