force-app/main/default/objects/TradingMap__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>The Salesforce SObject this mapping applies to</description>
    <inlineHelpText>The Salesforce SObject this mapping applies to</inlineHelpText>
    <label>SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Trading Maps</relationshipLabel>
    <relationshipName>TradingMaps</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>