force-app/main/default/objects/TradingMap__mdt/fields/SObjectField__c.field-meta.xml
<CustomField>
    <fullName>SObjectField__c</fullName>
    <description>The field on the selected SObject this field assignments points towards.</description>
    <inlineHelpText>The field on the selected SObject this field assignments points towards.</inlineHelpText>
    <label>SObject Field</label>
    <metadataRelationshipControllingField>TradingMap__mdt.SObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Trading Maps</relationshipLabel>
    <relationshipName>TradingMaps</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>