force-app/main/default/objects/TradingMap__mdt/fields/SyncDirection__c.field-meta.xml
<CustomField>
    <fullName>SyncDirection__c</fullName>
    <description>The source of truth for this field between Addepar and Salesforce</description>
    <inlineHelpText>The source of truth for this field between Addepar and Salesforce</inlineHelpText>
    <label>Sync Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addepar to Salesforce</fullName>
                <default>true</default>
                <label>Addepar to Salesforce</label>
            </value>
            <value>
                <fullName>Salesforce to Addepar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>