force-app/main/default/objects/TradingMap__mdt/fields/TradingField__c.field-meta.xml
<CustomField>
    <fullName>TradingField__c</fullName>
    <description>The Addepar Trading Entity this mapping applies to</description>
    <inlineHelpText>The Addepar Trading Entity this mapping applies to</inlineHelpText>
    <label>Trading Field</label>
    <referenceTo>TradingField__mdt</referenceTo>
    <relationshipLabel>Trading Maps</relationshipLabel>
    <relationshipName>TradingMaps</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>